--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <h2>Register Here</h2>
-    <form action="/register", method="POST">
+    <h2>Login Here</h2>
+    <form action="/login", method="POST">
     Email: <input type="text" name="email">
     <br>
     Password: <input type="text" name="password">
